<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    tools:context=".Qurani">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/qurani_img"
            tools:srcCompat="@drawable/qurani_img" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn1_style"
                    android:onClick="affasi"
                    android:text="@string/affasi_hafs"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn1_style"
                    android:onClick="basit_warsh"
                    android:text="@string/basit_hafs"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn1_style"
                    android:onClick="mailki"
                    android:text="@string/maher_hafs"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn1_style"
                    android:onClick="ajmi"
                    android:text="@string/ajmi_hafs"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn1_style"
                    android:onClick="yacine"
                    android:text="@string/yacine_warch"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn1_style"
                    android:onClick="basit_warsh"
                    android:text="@string/basit_warch"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn1_style"
                    android:onClick="dosri"
                    android:text="@string/ibrahim_warch"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>